apps/grafana-loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-loki
  labels:
    gateway-access: grafana-loki
