apps/grafana-loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: grafana-loki
spec:
  ports:
    - port: 3100
      targetPort: 3100
      name: http
  selector:
    app: loki
